# cppstarter

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  test.sh
clion/: C++ClassGTest.cc  C++ClassObjImpl.cc  C++ClassObjImplHeader.h  C++ClassValueImpl.cc  C++ClassValueImplHeader.h  Readme.md
clion/includes/: C++TemplateVariables.template
include/cxxstarter/: AnotherValueClass.h  ClassTemplate.h  ObjectClass.h  ValueClass.h
src/: AnotherValueClass.cc  CMakeLists.txt  ObjectClass.cc  ValueClass.cc  util.cc  util.h
test/: AnotherValueTest.cc  CMakeLists.txt  ObjectClassTest.cc  ValueClassTest.cc  boostLib.cc  fmtLibTest.cc  follyTests.cc  stdlibTest.cc  util.cc  util.h
